"All strings on the homepage are now linked to a language"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,10 @@
 {
-    "global:": {
+    "global": {
         "title": "Shitty Movies"
+    },
+    "home": {
+        "yearsSelectorLabel": "By yeare",
+        "allYears": "All",
+        "searchTerm": "Search a movie, actress, director..."
     }
 }
