--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,5 +6,8 @@
         "yearsSelectorLabel": "Par année",
         "allYears": "Toutes",
         "searchTerm": "Trouve un film, un·e acteurice, un·e réalisateurice..."
+    },
+    "moviesListing": {
+        "moviesResult": "`movieService.movieCounter`, plural, =0 {Aucun film} =1 {Un film} many { movieService.movieCounter }"
     }
 }
