--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
     "global": {
-        "title": "Films qui détestent le Front"
+        "title": "Films époustouflants"
     },
     "home": {
         "yearsSelectorLabel": "Par année",
