--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,7 +8,15 @@
         "searchTerm": "Trouve un film, un·e acteurice, un·e réalisateurice..."
     },
     "moviesListing": {
-        "moviesResult": "`movieService.movieCounter`, plural, =0 {Aucun film} =1 {Un film} many { movieService.movieCounter }"
+        "moviesResult": "`movieService.movieCounter`, plural, =0 {Aucun film} =1 {Un film} many { movieService.movieCounter }",
+        "movieNull": "Pas de résultat",
+        "movieSingle" : "film",
+        "moviePlural" : "films",
+        "lessOne": "Il y a moins d'un an",
+        "moreTwo": "Il y a plus de 2 ans",
+        "twoAndFive": "Entre 2 et 5 ans",
+        "betweenFiveAndTen": "Entre 5 et 10 ans",
+        "moreTen": "Il y a plus de 10 ans"
     },
     
     "registerForm": {
