"stuff works BUT I need to change the registration parameters now"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,6 +73,7 @@
             "placeholder": "New password",
             "fieldRequired" : "A password is required and must have at least 8 characters"
         },
+        "isAdmin": "Am I an admin",
         "becomeAdmin": "Become an admin",
         "giveUpAdmin": "Give up admin role",
         "modifyAccount": "Create account",
